--- a/src/components/ProjectSearch/TextSearch.css
+++ b/src/components/ProjectSearch/TextSearch.css
@@ -83,12 +83,7 @@
 }
 
 .project-text-search .search-field .close-btn.big {
-  margin-top: 10px;
-}
-
-.project-text-search .search-field .close-btn.big img.close {
-  margin-top: 0px;
-  margin-left: 0px;
+  margin-top: 12px;
 }
 
 .project-text-search .managed-tree {
