--- a/src/components/shared/Button/Close.css
+++ b/src/components/shared/Button/Close.css
@@ -7,7 +7,10 @@
   height: 14px;
   border: 1px solid transparent;
   border-radius: 2px;
-  padding-left: 4px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .close-btn .close {
@@ -19,8 +22,6 @@
   transition: all 0.15s ease-in-out;
   padding: 0;
   margin-top: 0;
-  display: inline-flex;
-  justify-content: center;
 }
 
 .close-btn:hover img.close {
@@ -28,21 +29,15 @@
 }
 
 .close-btn:hover {
-  display: block;
   background-color: var(--theme-selection-background);
 }
 
 .close-btn.big {
-  padding: 3px;
-  width: 20px;
-  height: 20px;
-}
-
-.close-btn.big .close {
   width: 16px;
   height: 16px;
 }
 
-.close-btn.big img.close {
-  width: 12px;
+.close-btn.big .close {
+  width: 9px;
+  height: 9px;
 }
